fix sidebar overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3210,28 +3210,6 @@ input, select, textarea {
 		padding: 0 10.75em 0 10.75em;
 		
 	}
-		@media screen and (max-width: 2000px) {
-
-				.wrapper {
-					padding: 0 5em 0 5em;
-				}
-			
-			}
-		@media screen and (max-width: 1280px) {
-
-				.wrapper {
-					padding: 0 3em 0 3em;
-				}
-			
-			}
-		@media screen and (max-width: 736px) {
-
-				.wrapper {
-					width: 100%;
-					padding: 0 1em 0 1em;
-				}
-			
-			}
 
 		.wrapper > .inner {
 			max-width: 100%;
@@ -3564,7 +3542,7 @@ input, select, textarea {
 		top: 0;
 		width: auto;
 		z-index: 3;
-		font-size: calc(1em - 0.5vh);
+		font-size: calc(1em - 0.1vh);
 	}
 
 		#sidebar > .inner {
